classView: fix long name wrapping in chatContainer

--- a/client/app/classView/classView.styl
+++ b/client/app/classView/classView.styl
@@ -262,6 +262,7 @@ div.digitalSchoolUtilities
 				font-size: 20px
 				cursor: pointer
 				background-color: #fff
+				white-space: nowrap
 
 				span
 					margin-left: 10px
